# PSAIR

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
docs/doctools_manual/: 00_modules_overview.md  00_outline.md  01_manual_pdf_yaml.md  02_manual_index.md  03_manual_outline.md  04_manual_chars.md  05_manual_pdf.md  06_manual_viewer.md  07_cli_reference.md  08_cli_quick_recipes.md  tools_manual_pdf.yaml
docs/psair_manual/: 00_outline.md  00_psair_overview.md  psair_manual_pdf.yaml
docs/psair_manual/01_overview/: 01_01_psair_overview.md  01_02_optional_extras.md
docs/psair_manual/02_metadata/: 02_01_metadata_fields.md  02_01_tiers.md  02_02_discovery.md
docs/psair_manual/03_nlp_module/: 03_01_preprocessing.md  03_02_nlp_model.md
reqs/: base.txt  dev.txt  docs.txt  eda.in  eda.txt  etl.in  etl.txt  full.txt  log.in  log.txt  nlp-full.in  nlp-full.txt  nlp-parse.in  nlp-parse.txt  nlp-phon.in  nlp-phon.txt  nlp-process.in  nlp-process.txt  nlp.txt  view.in  view.txt  web.in  web.txt
src/: __init__.py
src/infoscopy/nlp/: NLPmodel.py  data_processing.py
src/infoscopy/nlp_utils/: preprocessing.py
src/infoscopy/pipeline/: PipelineManager.py
src/infoscopy/utils/: EDADaemon.py  OutputManager.py  SQLDaemon.py  Table.py  Tier.py  visualization.py
src/psair/: __init__.py
src/psair/cli/: __init__.py  args.py  main.py
src/psair/core/: logger.py
src/psair/eda/: EDADaemon.py  visualization.py
src/psair/etl/: OutputManager.py  SQLDaemon.py  Table.py
src/psair/manual/: __init__.py  chars.py  index.py  outline.py  pdf.py
src/psair/metadata/: discovery.py  metadata_fields.py  tiers.py
src/psair/nlp/: NLPmodel.py  __init__.py  data_processing.py  preprocessing.py
src/psair/pipeline/: PipelineManager.py
src/psair/utils/: config_io.py
src/psair/webapp/: __init__.py  manual_export.py  manual_viewer.py  streamlit_app.py
tests/test_cli/: test_main.py
tests/test_core/: test_logger.py
tests/test_manual/: test_chars.py  test_index.py  test_outline.py  test_pdf.py
tests/test_metadata/: test_discovery.py  test_metadata_fields.py  test_tiers.py
tests/test_nlp/: test_NLPmodel.py  test_data_processing.py  test_preprocessing.py
tests/test_webapp/: test_manual_export.py  test_manual_viewer.py
