[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psair"
version = "0.0.1a2"
description = "Backend scaffolding for documentation, data handling, and analysis-oriented research software."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Nick McCloskey" }
]
keywords = ["research", "analysis", "pipeline", "documentation", "etl", "eda", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = [
  "numpy>=1.23,<1.28",
  "pandas>=2.2,<2.3",
  "PyYAML>=6.0,<7.0",
  "tqdm>=4.67,<5.0",
]

[project.optional-dependencies]
docs = [
  "openpyxl>=3.1,<3.2",
  "PyPDF2>=3.0,<3.1",
  "pypandoc>=1.17,<2.0",
  "svglib>=1.5,<2.0",
  "reportlab>=4.3,<5.0",
  "python-docx>=1.1,<2.0",
]

eda = [
  "scikit-learn>=1.6,<1.7",
  "scipy>=1.10.1,<1.16",
  "matplotlib>=3.10,<3.11",
  "seaborn>=0.13,<0.14",
  "openpyxl>=3.1,<3.2",
]

nlp = [
  "spacy>=3.8,<4.0",
  "benepar>=0.2,<0.3",
  "nltk>=3.9,<4.0",
  "docx2txt>=0.8,<1.0",
]

web = [
  "streamlit>=1.44,<2.0",
  "markdown>=3.7,<4.0",
]

dev = [
  "pytest>=8,<9",
]

full = [
  "openpyxl>=3.1,<3.2",
  "PyPDF2>=3.0,<3.1",
  "pypandoc>=1.17,<2.0",
  "svglib>=1.5,<2.0",
  "reportlab>=4.3,<5.0",
  "python-docx>=1.1,<2.0",
  "scikit-learn>=1.6,<1.7",
  "scipy>=1.10.1,<1.16",
  "matplotlib>=3.10,<3.11",
  "seaborn>=0.13,<0.14",
  "spacy>=3.8,<4.0",
  "benepar>=0.2,<0.3",
  "nltk>=3.9,<4.0",
  "docx2txt>=0.8,<1.0",
  "streamlit>=1.44,<2.0",
  "markdown>=3.7,<4.0",
]

[project.urls]
Repository = "https://github.com/nmccloskey/PSAIR"
Issues = "https://github.com/nmccloskey/PSAIR/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["psair*"]

[project.scripts]
psair = "psair.cli.main:main"
psair-manual = "psair.cli.main:main"
streamlit_psair = "psair.webapp.streamlit_app:main"
